# react-native-webassembly

./: .gitignore  .npmignore  CONTRIBUTING.md  LICENSE  README.md  app.plugin.js  package.json  react-native-webassembly.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/webassembly/: WebassemblyModule.java  WebassemblyPackage.java
cpp/: m3_bind.c  m3_bind.h  m3_env.c  react-native-webassembly.cpp  react-native-webassembly.h  wasm3_cpp.h
example/: README.md  app.json  index.d.ts  metro.config.js  package.json
example/__src__/: App.tsx
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/debug/java/com/webassemblyexample/: ReactNativeFlipper.java
example/android/app/src/main/java/com/webassemblyexample/: MainActivity.java  MainApplication.java
example/android/app/src/main/res/values/: strings.xml
example/ios/: File.swift  Podfile
example/ios/WebassemblyExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/WebassemblyExample.xcodeproj/: project.pbxproj
example/ios/WebassemblyExample.xcodeproj/xcshareddata/xcschemes/: WebassemblyExample.xcscheme
example/ios/WebassemblyExample.xcworkspace/: contents.xcworkspacedata
example/ios/WebassemblyExampleTests/: WebassemblyExampleTests.m
example/src/: App.tsx
example/src/hooks/: index.ts  useWasmCircomRuntime.ts  useWasmHelloWorld.ts  useWasmUri.ts
example/src/sources/: Local.Callback.wasm  Local.Callback.wat  Local.SimpleMemory.wasm  Local.SimpleMemory.wat
example/src/utils/: fetchWasm.ts  index.ts
ios/: Webassembly.h  Webassembly.mm
ios/Webassembly.xcodeproj/: project.pbxproj
src/: NativeWebassembly.ts  index.tsx
(+1 files in other folders)
